# bib_tui

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  app.py  bib_tui.tcss  justfile  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
bib/: doi.py  models.py  parser.py
concept/: possible_future.md
docs/: collaboration.md  configuration.md  development.md  getting-started.md  index.md  installation.md  keybindings.md
docs/guide/: editing.md  importing.md  keywords.md  pdfs.md  search.md
docs/logo/: logo.pxo
docs/pictures/: logo2.pxo
scripts/: generate_screenshots.py
src/bib_tui/: __init__.py  app.py  main.py
src/bib_tui/bib/: models.py  parser.py  pdf_fetcher.py
src/bib_tui/utils/: config.py  theme.py
src/bib_tui/widgets/: entry_detail.py  entry_list.py  modals.py
src/bibtui/: __init__.py  app.py  bibtui.tcss  main.py
src/bibtui/bib/: citation_preview.py  citekeys.py  doi.py  models.py  parser.py  validate.py
src/bibtui/pdf/: __init__.py  fetcher.py  paths.py
src/bibtui/utils/: config.py  dates.py  git.py  theme.py  update_check.py
src/bibtui/widgets/: entry_detail.py  entry_list.py  modals.py
tests/: smoketest.py  test_citation_preview.py  test_citekeys.py  test_config.py  test_dates.py  test_doi.py  test_import_keys.py  test_library_fetch.py  test_models.py  test_new_entry.py  test_parser.py  test_pdf_actions.py  test_pdf_add.py  test_pdf_fetcher.py  test_update_check.py  test_validate.py
tests/bib_examples/: MyCollection.bib  MyCollection.bib.original
utils/: git.py  theme.py
widgets/: entry_detail.py  entry_list.py  modals.py
