[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[project]
name = "bib-tui"
version = "0.1.0"
description = "Terminal UI for managing BibTeX bibliography files"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bibtexparser>=2.0.0b9",
    "click>=8.3.1",
    "habanero>=2.3.0",
    "textual>=8.0.0",
]

[project.scripts]
bib-tui = "bib_tui.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "textual-dev>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/bib_tui --cov-report=term-missing"
markers = [
    "network: tests that make real HTTP requests (deselect with -m 'not network')",
]

[tool.coverage.run]
source = ["src/bib_tui"]
omit = ["src/bib_tui/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
]
