[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[project]
name = "bibtui"
version = "0.10.0"
authors = [
  {name = "Thomas Gölles", email = "thomas.goelles@gmail.com"}
]
description = "A quiet, powerful home for your references."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["bibtex", "bibliography", "tui", "terminal", "latex"]
dependencies = [
    "bibtexparser>=2.0.0b9",
    "click>=8.3.1",
    "habanero>=2.3.0",
    "packaging>=24.0",
    "textual>=8.0.0",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
[project.urls]
Homepage = "https://github.com/tgoelles/bib_tui"
Repository = "https://github.com/tgoelles/bib_tui"
"Bug Tracker" = "https://github.com/tgoelles/bib_tui/issues"

[project.scripts]
bibtui = "bibtui.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "textual-dev>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/bibtui --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "network: tests that make real HTTP requests (deselect with -m 'not network')",
]

[tool.coverage.run]
source = ["src/bibtui"]
omit = ["src/bibtui/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.uv]
# bibtexparser v2 is still in pre-release on PyPI; allow it explicitly.
prerelease = "allow"


